2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* log.test:    Fixed cleanup of temp. files used by testsuite.
	* logger.test: Fixed usage of duplicate test names.

2006-01-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* log.test: More boilerplate simplified via use of test support.
	* logger.test:
	* loggerUtils.test:

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* loggerUtils.tcl: The utilities require Tcl 8.4, they use
	* loggerUtils.man: 'trace'-APIs not yet present before 8.4.
	* pkgIndex.tcl:
 
	* log.test: Hooked into the new common test support code.
	* logger.test:
	* loggerUtils.test:

2005-12-02  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl:        Fixed bug [SF Tcllib 1329642]. There
	* logger.man:        is now a new global enabled state.
	* logger.test:       This needed a fix to the loggerUtils
	* pkgIndex.tcl:      testsuit, to set a working default log
	  loggerUtils.test:  level (debug instead of critical).

	**** Potential Incompatibility ****
	New top level logger instances now start with the loglevel set 
	by logger::setlevel instead of debug. The default is still
	set to debug.

2005-11-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* loggerAppender.man: Fixed small typo in the appender
	  documentation, a reference to the wrong package.

2005-10-11  Pat Thoyts <patthoyts@users.sourceforge.net>

	* loggerUtils.tcl: Avoid use of %G in time formats. (not
	                   widely supported in C libraries)

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-09-28  Andreas Kupries <andreask@activestate.com>

	* loggerAppender.tcl: Integrated the formatter/appender utilities
	* loggerAppender.man: provided by [SF Tcllib 1267636]. Created
	* loggerUtils.tcl:    doctools based documentation. Fixed mis-