@@ -1,18 +1,8 @@
-# Tcl package index file, version 1.1
-# This file is generated by the "pkg_mkIndex" command
-# and sourced either when an application starts up or
-# by a "package unknown" script.  It invokes the
-# "package ifneeded" command to set up package-related
-# information so that packages will be loaded automatically
-# in response to "package require" commands.  When this
-# script is sourced, the variable $dir must contain the
-# full path name of this file's directory.
-
 if {![package vsatisfies [package provide Tcl] 8]} {return}
 package ifneeded log 1.2 [list source [file join $dir log.tcl]]
 
 if {![package vsatisfies [package provide Tcl] 8.2]} {return}
-package ifneeded logger           0.6.2 [list source [file join $dir logger.tcl]]
+package ifneeded logger           0.6.3 [list source [file join $dir logger.tcl]]
 package ifneeded logger::appender 1.3   [list source [file join $dir loggerAppender.tcl]]
 
 if {![package vsatisfies [package provide Tcl] 8.4]} {return}
